# random-valory-scripts

./: .gitignore  CLAUDE.md  README.md  analyse_mech_requests.py  find_all_tools_requested_from_a_mech.py  find_deliver_events_for_a_request_id.py  find_mech_requests_for_a_tool.py  get_gas_price.py  pyproject.toml  test_tools_with_resource_util.py  tool_accuracy.py  tool_accuracy_polymarket.py  tool_accuracy_timeline.py
chatui/: README.md  latency_tester.py
market-creator/: README.md  analyze_attacker_targets.py  market-watcher.py  realitio_abi.json  resolve_markets.py
mech/: MECH_IPFS_ABUSE_REPORT.md  README.md  analyze_base_mech_delivers.py  analyze_mech_delivers.py  analyze_pyes_trends.py  check_all_mechs.py  check_marketplace_request_encoding.py  check_mech_requests_ipfs.py  count_daily_requests_by_tool.py  diff_base_delivers.py  factual_research_report.md  fetch_mech_delivers.py  fetch_recent_mech_delivers.py  find_all_tools_requested_from_a_mech.py  find_deliver_events_for_a_request_id.py  find_mech_delivers_for_al_tool.py  find_requests_for_a_mech.py  list_factual_research_ipfs_links.py  list_marketplace_tools.py  march_2026_bet_trends_report.md  mech_deliver_timeline.py  mech_usage_timeline.py  olas_trader_effective_tools.py  source_content_cleaned_only_report.md  source_content_impact_report.md  tool_response_trend.py
omen/: OMEN_ORACLE_MANIPULATION_REPORT.md  README.md  ZD919_INVALID_MARKETS_REPORT.md  ZD919_TRADER_INVESTIGATION_BRIEF.md  analyze_omen_profitability.py  omen_daily_activity.py  omen_yes_no_ratio.py  verify_invalid_markets_zd919.py  (+2 more)
(+63 files in other folders)
