[tool.poetry]
name = "random-valory-scripts"
version = "0.1.0"
description = "Utility scripts for analyzing the Autonolas/Olas ecosystem"
authors = ["Jenslee Dsouza <jenslee.dsouza@valory.xyz>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4"
web3 = ">=6.0.0"
dotenv = ">=0.9.9,<0.10.0"
[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"

