[tool.poetry]
name = "random-valory-scripts"
version = "0.1.0"
description = "Utility scripts for analyzing the Autonolas/Olas ecosystem"
authors = ["Jenslee Dsouza <jenslee.dsouza@valory.xyz>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4"
web3 = ">=6.0.0"
dotenv = ">=0.9.9,<0.10.0"
mech-client = {version = ">=0.20.0", python = ">=3.12,<3.15"}
open-aea-ledger-ethereum-hwi = {version = ">=2.1.0", python = ">=3.12,<3.15"}
[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"

